Control with env

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ dependencies = [
   "loguru>=0.7.2",
   "playwright>=1.47.0",
   "pydantic>=2.9.2",
+  "python-dotenv>=1.0.1",
   "requests>=2.32.3",
 ]
 description = "Add your description here"
